# JioSaavnAPI

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/api/: album.rs  artist.rs  auth_url.rs  autocomplete.rs  home.rs  mod.rs  playlist.rs  related_album.rs  related_playlist.rs  search.rs  song.rs  util.rs
src/client/: default_client.rs  mod.rs
src/enums/: artist_category.rs  bitrate.rs  call.rs  language.rs  mod.rs  sort_order.rs
src/http/: client.rs  errors.rs  http.rs  mod.rs  uri.rs
src/parser/: mod.rs  parse_album.rs  parse_artist.rs  parse_auth_url.rs  parse_home.rs  parse_playlist.rs  parse_search.rs  parse_song.rs
src/types/: mod.rs
src/utils/: array.rs  entity.rs  mod.rs  parser.rs
