[package]
name = "jiosaavnapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14"
hyper-rustls = "0.24"
serde_json = "1.0"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }